# xmonad-web

./: .gitignore  README.md  community.md  documentation.md  download.md  index.html  install-instructions.md  stack.yaml  tour.md  xmonad-web.cabal
.github/workflows/: deploy-gh-pages.yaml
css/: main.css
docs/: about.html  community.html  documentation.html  download.html  index.html  install-instructions.html  tour.html  videos.html
docs/css/: bootstrap.min.css  font-raleway.css  main.css
src/: xmonad-web.hs
templates/: default.html  videos.html
