name:               xmonad-web
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.8

executable xmonad-web
  main-is:          xmonad-web.hs
  build-depends:    base >= 4.9 && < 5
                  , hakyll == 4.13.4.0
  hs-source-dirs:   src
  ghc-options:      -threaded -fwarn-tabs -Wall -Wno-unused-do-bind -Wno-unused-imports
